--- a/src/assets/styles/mixins.scss
+++ b/src/assets/styles/mixins.scss
@@ -8,7 +8,7 @@
 @mixin labelTitle () {
   color: #fff;
   font-size: 24px;
-  margin-bottom: 10px;
+  margin: 10px 0;
 }
 
 @mixin inputSettings () {
