--- a/src/App.scss
+++ b/src/App.scss
@@ -1,38 +1,39 @@
-.App {
-  text-align: center;
-}
+@import "./assets/styles/index";
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.hexoceanMenu {
+  font-family: sans-serif;
+  width: 100%;
+  height: 100%;
+  background: url("./assets/images/background.jpg");
+  @include flex(center, column, center);
+  & .hexoceanWrapper {
+    background-color: rgba(0,0,0,0.6);
+    @include flex(center, column, center);
+    border-radius: 50px;
+    min-height: 310px;
+    min-width: 370px;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+    & .hexoceanForm {
+      margin: 30px;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+      & .formLabel {
 
-.App-link {
-  color: #61dafb;
-}
+        margin: 10px 0;
+        & .labelTitle {
+          @include labelTitle;
+        }
+        & .normalInput {
+          @include inputSettings;
+        }
+      }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+      & .buttonWrapper {
+        @include flex(center, row, center);
+        & .submitBtn {
+          @include button;
+          margin-top: 10px;
+        }
+      }
+    }
   }
 }
