Provide react-hook-form | T his package was introduced to serve all user input. Due to the fact that the form is nested, some elements from useForm were passed to the components using props.

--- a/src/App.scss
+++ b/src/App.scss
@@ -35,7 +35,11 @@
 
           & input {
             color: #fff;
+            cursor: pointer;
           }
+        }
+        & .errorField {
+          @include errorField;
         }
         & .dishTypeSelector {
           @include inputSettings;
