--- a/src/assets/styles/mixins.scss
+++ b/src/assets/styles/mixins.scss
@@ -8,7 +8,7 @@
 @mixin labelTitle () {
   color: #fff;
   font-size: 24px;
-  margin: 10px 0;
+  margin-bottom: 10px;
 }
 
 @mixin inputSettings () {
@@ -20,9 +20,14 @@
   margin: 5px 0;
   width: 100%;
   font-size: 20px;
+  cursor: pointer;
 
   &:focus {
     outline: none;
+  }
+
+  &:hover {
+    cursor: pointer;
   }
 }
 
@@ -70,4 +75,15 @@
     box-shadow: #D6D6E7 0 3px 7px inset;
     transform: translateY(2px);
   }
+
+  &:disabled {
+    opacity: 0.5;
+    pointer-events: none;
+  }
+}
+
+@mixin errorField () {
+    height: 20px;
+    color: #cc0000;
+    font-weight: 600;
 }
